# ros_arm_exercises

./: README.md  《ROS机械臂开发与实践》课后习题答案.docx
exercise_four/: CMakeLists.txt  package.xml
exercise_four/launch/: tf_demo.launch  view_rviz.launch
exercise_four/rviz/: 1.rviz  tf_test.rviz
exercise_four/scripts/: tf_broadcaster.py  tf_listener.py
exercise_four/src/: tf_broadcaster.cpp  tf_listener.cpp
exercise_seven/: CMakeLists.txt  package.xml
exercise_seven/scripts/: pick_place.py  pose_plan.py
exercise_seven/src/: pick_place.cpp  pose_plan.cpp
exercise_three/: CMakeLists.txt  package.xml
exercise_three/scripts/: add_client.py  add_server.py  pub_test.py  sub_test.py
exercise_three/src/: add_client.cpp  add_server.cpp  pub_test.cpp  sub_test.cpp
exercise_three/srv/: CallAdd.srv
my_car_description/: CMakeLists.txt  package.xml  urdf.rviz
my_car_description/launch/: display.launch
my_car_description/urdf/: my_car.xacro
myrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myrobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  myrobot.srdf  ompl_planning.yaml  ros_controllers.yaml
myrobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  myrobot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
